--- a/src/views/common/dashboard/welcome/index.scss
+++ b/src/views/common/dashboard/welcome/index.scss
@@ -10,3 +10,9 @@
     background-color: #f5f5f5;
   }
 }
+
+.example-content {
+  padding: 15px 30px;
+  margin: 0 10px;
+  background-color: #f5f5f5;
+}
