--- a/public/static/map-dynamic/css/easy-button.css
+++ b/public/static/map-dynamic/css/easy-button.css
@@ -1,56 +1,56 @@
 .leaflet-bar button,
 .leaflet-bar button:hover {
-  background-color: #fff;
-  border: none;
-  border-bottom: 1px solid #ccc;
-  width: 26px;
-  height: 26px;
-  line-height: 26px;
-  display: block;
-  text-align: center;
-  text-decoration: none;
-  color: black;
+  display : block;
+  width : 26px;
+  height : 26px;
+  line-height : 26px;
+  color : black;
+  text-align : center;
+  text-decoration : none;
+  background-color : #fff;
+  border : none;
+  border-bottom : 1px solid #ccc
 }
 
 .leaflet-bar button {
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  overflow: hidden;
-  display: block;
+  display : block;
+  overflow : hidden;
+  background-position : 50% 50%;
+  background-repeat : no-repeat
 }
 
 .leaflet-bar button:hover {
-  background-color: #f4f4f4;
+  background-color : #f4f4f4
 }
 
 .leaflet-bar button:first-of-type {
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
+  border-top-right-radius : 4px;
+  border-top-left-radius : 4px
 }
 
 .leaflet-bar button:last-of-type {
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-  border-bottom: none;
+  border-bottom : none;
+  border-bottom-right-radius : 4px;
+  border-bottom-left-radius : 4px
 }
 
 .leaflet-bar.disabled,
 .leaflet-bar button.disabled {
-  cursor: default;
-  pointer-events: none;
-  opacity: .4;
+  pointer-events : none;
+  cursor : default;
+  opacity : .4
 }
 
 .easy-button-button .button-state{
-  display: block;
-  width: 100%;
-  height: 100%;
-  position: relative;
+  position : relative;
+  display : block;
+  width : 100%;
+  height : 100%
 }
 
 
 .leaflet-touch .leaflet-bar button {
-  width: 30px;
-  height: 30px;
-  line-height: 30px;
+  width : 30px;
+  height : 30px;
+  line-height : 30px
 }
