--- a/public/static/map-dynamic/libs/leaflet-ruler.css
+++ b/public/static/map-dynamic/libs/leaflet-ruler.css
@@ -17,7 +17,7 @@
   border-color: chartreuse !important;
 }
 .leaflet-bar{
-  background-color: #ffffff;
+  background-color: #fff;
 }
 .leaflet-control {
   cursor: pointer;
