--- a/public/static/map-dynamic/libs/sidebar-menu.css
+++ b/public/static/map-dynamic/libs/sidebar-menu.css
@@ -1,74 +1,93 @@
 .sidebar-menu {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  background-color: #222d32; }
+  padding : 0;
+  margin : 0;
+  list-style : none;
+  background-color : #222d32 }
+
   .sidebar-menu > li {
-    position: relative;
-    margin: 0;
-    padding: 0; }
+    position : relative;
+    padding : 0;
+    margin : 0 }
+
     .sidebar-menu > li > a {
-      padding: 12px 5px 12px 15px;
-      display: block;
-      border-left: 3px solid transparent;
-      color: #b8c7ce; }
+      display : block;
+      padding : 12px 5px 12px 15px;
+      color : #b8c7ce;
+      border-left : 3px solid transparent }
+
       .sidebar-menu > li > a > .fa {
-        width: 20px; }
+        width : 20px }
+
     .sidebar-menu > li:hover > a, .sidebar-menu > li.active > a {
-      color: #fff;
-      background: #1e282c;
-      border-left-color: #3c8dbc; }
+      color : #fff;
+      background : #1e282c;
+      border-left-color : #3c8dbc }
+
     .sidebar-menu > li > .treeview-menu {
-      margin: 0 1px;
-      background: #2c3b41; }
+      margin : 0 1px;
+      background : #2c3b41 }
+
     .sidebar-menu > li .label,
     .sidebar-menu > li .badge {
-      margin-top: 3px;
-      margin-right: 5px; }
+      margin-top : 3px;
+      margin-right : 5px }
+
   .sidebar-menu li.header {
-    padding: 10px 25px 10px 15px;
-    font-size: 15px;
-    width:230px;
-    color: #9E9E9E;
-    background: #1a2226; }
+    width : 230px;
+    padding : 10px 25px 10px 15px;
+    font-size : 15px;
+    color : #9E9E9E;
+    background : #1a2226 }
+
     .sidebar-menu li.label {
-    padding: 10px 25px 10px 15px;
-    font-size: 12px;
-    color: #4b646f;
-    background: #1a2226;
-    height: 37px; }
+    height : 37px;
+    padding : 10px 25px 10px 15px;
+    font-size : 12px;
+    color : #4b646f;
+    background : #1a2226 }
+
   .sidebar-menu li > a > .fa-angle-left {
-    width: auto;
-    height: auto;
-    padding: 0;
-    margin-right: 10px;
-    margin-top: 3px; }
+    width : auto;
+    height : auto;
+    padding : 0;
+    margin-top : 3px;
+    margin-right : 10px }
+
   .sidebar-menu li.active > a > .fa-angle-left {
-    transform: rotate(-90deg); }
+    transform : rotate(-90deg) }
+
   .sidebar-menu li.active > .treeview-menu {
-    display: block; }
+    display : block }
+
   .sidebar-menu a {
-    color: #b8c7ce;
-    text-decoration: none; }
+    color : #b8c7ce;
+    text-decoration : none }
+
   .sidebar-menu .treeview-menu {
-    display: none;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    padding-left: 5px; }
+    display : none;
+    padding : 0;
+    padding-left : 5px;
+    margin : 0;
+    list-style : none }
+
     .sidebar-menu .treeview-menu .treeview-menu {
-      padding-left: 20px; }
+      padding-left : 20px }
+
     .sidebar-menu .treeview-menu > li {
-      margin: 0; }
+      margin : 0 }
+
       .sidebar-menu .treeview-menu > li > a {
-        padding: 5px 5px 5px 15px;
-        display: block;
-        font-size: 14px;
-        color: #8aa4af; }
+        display : block;
+        padding : 5px 5px 5px 15px;
+        font-size : 14px;
+        color : #8aa4af }
+
         .sidebar-menu .treeview-menu > li > a > .fa {
-          width: 20px; }
+          width : 20px }
+
         .sidebar-menu .treeview-menu > li > a > .fa-angle-left,
         .sidebar-menu .treeview-menu > li > a > .fa-angle-down {
-          width: auto; }
+          width : auto }
+
       .sidebar-menu .treeview-menu > li.active > a, .sidebar-menu .treeview-menu > li > a:hover {
-        color: #fff; }
+        color : #fff }
