--- a/public/static/offline-map/css/bmap.css
+++ b/public/static/offline-map/css/bmap.css
@@ -1,255 +1,255 @@
 .BMap_mask {
-  background: transparent url(../images/blank.gif);
+  background : transparent url(../images/blank.gif)
 }
 
 .BMap_noscreen {
-  display: none;
+  display : none
 }
 
 .BMap_button {
-  cursor: pointer;
+  cursor : pointer
 }
 
 .BMap_zoomer {
-  background-image: url(../images/mapctrls1d3.gif);
-  background-repeat: no-repeat;
-  overflow: hidden;
-  font-size: 1px;
-  position: absolute;
-  width: 7px;
-  height: 7px;
+  position : absolute;
+  width : 7px;
+  height : 7px;
+  overflow : hidden;
+  font-size : 1px;
+  background-image : url(../images/mapctrls1d3.gif);
+  background-repeat : no-repeat
 }
 
 .BMap_stdMpCtrl div {
-  position: absolute;
+  position : absolute
 }
 
 .BMap_stdMpPan {
-  width: 44px;
-  height: 44px;
-  overflow: hidden;
-  background: url(../images/mapctrls2d0.png) no-repeat;
+  width : 44px;
+  height : 44px;
+  overflow : hidden;
+  background : url(../images/mapctrls2d0.png) no-repeat
 }
 
 .BMap_ie6 .BMap_stdMpPan {
-  background: none;
+  background : none
 }
 
 .BMap_ie6 .BMap_smcbg {
-  left: 0;
-  width: 44px;
-  height: 464px;
-  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/mapctrls2d0.png');
+  left : 0;
+  width : 44px;
+  height : 464px;
+  filter : progid:dximagetransform.microsoft.alphaimageloader(src='../images/mapctrls2d0.png')
 }
 
 .BMap_ie6 .BMap_stdMpPanBg {
-  z-index: -1;
+  z-index : -1
 }
 
 .BMap_stdMpPan .BMap_button {
-  height: 15px;
-  width: 15px;
+  width : 15px;
+  height : 15px
 }
 
 .BMap_panN,
 .BMap_panW,
 .BMap_panE,
 .BMap_panS {
-  overflow: hidden;
+  overflow : hidden
 }
 
 .BMap_panN {
-  left: 14px;
-  top: 0;
+  top : 0;
+  left : 14px
 }
 
 .BMap_panW {
-  left: 1px;
-  top: 12px;
+  top : 12px;
+  left : 1px
 }
 
 .BMap_panE {
-  left: 27px;
-  top: 12px;
+  top : 12px;
+  left : 27px
 }
 
 .BMap_panS {
-  left: 14px;
-  top: 25px;
+  top : 25px;
+  left : 14px
 }
 
 .BMap_stdMpZoom {
-  top: 45px;
-  overflow: hidden;
+  top : 45px;
+  overflow : hidden
 }
 
 .BMap_stdMpZoom .BMap_button {
-  width: 22px;
-  height: 21px;
-  left: 12px;
-  overflow: hidden;
-  background-image: url(../images/mapctrls2d0.png);
-  background-repeat: no-repeat;
-  z-index: 10;
+  left : 12px;
+  z-index : 10;
+  width : 22px;
+  height : 21px;
+  overflow : hidden;
+  background-image : url(../images/mapctrls2d0.png);
+  background-repeat : no-repeat
 }
 
 .BMap_ie6 .BMap_stdMpZoom .BMap_button {
-  background: none;
+  background : none
 }
 
 .BMap_stdMpZoomIn {
-  background-position: 0 -221px;
+  background-position : 0 -221px
 }
 
 .BMap_stdMpZoomOut {
-  background-position: 0 -265px;
+  background-position : 0 -265px
 }
 
 .BMap_ie6 .BMap_stdMpZoomIn div {
-  left: 0;
-  top: -221px;
+  top : -221px;
+  left : 0
 }
 
 .BMap_ie6 .BMap_stdMpZoomOut div {
-  left: 0;
-  top: -265px;
+  top : -265px;
+  left : 0
 }
 
 .BMap_stdMpSlider {
-  width: 37px;
-  top: 18px;
+  top : 18px;
+  width : 37px
 }
 
 .BMap_stdMpSliderBgTop {
-  left: 18px;
-  width: 10px;
-  overflow: hidden;
-  background: url(../images/mapctrls2d0.png) no-repeat -23px -226px;
+  left : 18px;
+  width : 10px;
+  overflow : hidden;
+  background : url(../images/mapctrls2d0.png) no-repeat -23px -226px
 }
 
 .BMap_stdMpSliderBgBot {
-  left: 19px;
-  height: 8px;
-  width: 10px;
-  top: 124px;
-  overflow: hidden;
-  background: url(../images/mapctrls2d0.png) no-repeat -33px bottom;
+  top : 124px;
+  left : 19px;
+  width : 10px;
+  height : 8px;
+  overflow : hidden;
+  background : url(../images/mapctrls2d0.png) no-repeat -33px bottom
 }
 
 .BMap_ie6 .BMap_stdMpSliderBgTop,
 .BMap_ie6 .BMap_stdMpSliderBgBot {
-  background: none;
+  background : none
 }
 
 .BMap_ie6 .BMap_stdMpSliderBgTop div {
-  left: -23px;
-  top: -226px;
+  top : -226px;
+  left : -23px
 }
 
 .BMap_ie6 .BMap_stdMpSliderBgBot div {
-  left: -33px;
-  bottom: 0;
+  bottom : 0;
+  left : -33px
 }
 
 .BMap_stdMpSliderMask {
-  height: 100%;
-  width: 24px;
-  left: 10px;
-  cursor: pointer;
+  left : 10px;
+  width : 24px;
+  height : 100%;
+  cursor : pointer
 }
 
 .BMap_stdMpSliderBar {
-  height: 11px;
-  width: 19px;
-  left: 13px;
-  top: 80px;
-  overflow: hidden;
-  background: url(../images/mapctrls2d0.png) no-repeat 0 -309px;
+  top : 80px;
+  left : 13px;
+  width : 19px;
+  height : 11px;
+  overflow : hidden;
+  background : url(../images/mapctrls2d0.png) no-repeat 0 -309px
 }
 
 .BMap_stdMpSliderBar.h {
-  background: url(../images/mapctrls2d0.png) no-repeat 0 -320px;
+  background : url(../images/mapctrls2d0.png) no-repeat 0 -320px
 }
 
 .BMap_ie6 .BMap_stdMpSliderBar,
 .BMap_ie6 .BMap_stdMpSliderBar.h {
-  background: none;
+  background : none
 }
 
 .BMap_ie6 .BMap_stdMpSliderBar div {
-  top: -309px;
+  top : -309px
 }
 
 .BMap_ie6 .BMap_stdMpSliderBar.h div {
-  top: -320px;
+  top : -320px
 }
 
 .BMap_zlSt,
 .BMap_zlCity,
 .BMap_zlProv,
 .BMap_zlCountry {
-  position: absolute;
-  left: 34px;
-  height: 21px;
-  width: 28px;
-  background-image: url(../images/mapctrls2d0.png);
-  background-repeat: no-repeat;
-  font-size: 0;
-  cursor: pointer;
+  position : absolute;
+  left : 34px;
+  width : 28px;
+  height : 21px;
+  font-size : 0;
+  cursor : pointer;
+  background-image : url(../images/mapctrls2d0.png);
+  background-repeat : no-repeat
 }
 
 .BMap_ie6 .BMap_zlSt,
 .BMap_ie6 .BMap_zlCity,
 .BMap_ie6 .BMap_zlProv,
 .BMap_ie6 .BMap_zlCountry {
-  background: none;
-  overflow: hidden;
+  overflow : hidden;
+  background : none
 }
 
 .BMap_zlHolder {
-  display: none;
-  position: absolute;
-  top: 0;
+  position : absolute;
+  top : 0;
+  display : none
 }
 
 .BMap_zlHolder.hvr {
-  display: block;
+  display : block
 }
 
 .BMap_zlSt {
-  background-position: 0 -380px;
-  top: 21px;
+  top : 21px;
+  background-position : 0 -380px
 }
 
 .BMap_zlCity {
-  background-position: 0 -401px;
-  top: 57px;
+  top : 57px;
+  background-position : 0 -401px
 }
 
 .BMap_zlProv {
-  background-position: 0 -422px;
-  top: 81px;
+  top : 81px;
+  background-position : 0 -422px
 }
 
 .BMap_zlCountry {
-  background-position: 0 -443px;
-  top: 105px;
+  top : 105px;
+  background-position : 0 -443px
 }
 
 .BMap_ie6 .BMap_zlSt div {
-  top: -380px;
+  top : -380px
 }
 
 .BMap_ie6 .BMap_zlCity div {
-  top: -401px;
+  top : -401px
 }
 
 .BMap_ie6 .BMap_zlProv div {
-  top: -422px;
+  top : -422px
 }
 
 .BMap_ie6 .BMap_zlCountry div {
-  top: -443px;
+  top : -443px
 }
 
 .BMap_stdMpType1 .BMap_stdMpSlider,
@@ -257,383 +257,383 @@
 .BMap_stdMpType3 .BMap_stdMpSlider,
 .BMap_stdMpType2 .BMap_stdMpZoom,
 .BMap_stdMpType3 .BMap_stdMpPan {
-  display: none;
+  display : none
 }
 
 .BMap_stdMpType3 .BMap_stdMpZoom {
-  top: 0;
+  top : 0
 }
 
 .BMap_cpyCtrl a {
-  font-size: 11px;
-  color: #7979CC;
+  font-size : 11px;
+  color : #7979CC
 }
 
 .BMap_scaleCtrl {
-  height: 23px;
-  overflow: hidden;
+  height : 23px;
+  overflow : hidden
 }
 
 .BMap_scaleCtrl div.BMap_scaleTxt {
-  font-size: 11px;
-  font-family: Arial, sans-serif;
+  font-family : Arial, sans-serif;
+  font-size : 11px
 }
 
 .BMap_scaleCtrl div {
-  position: absolute;
-  overflow: hidden;
+  position : absolute;
+  overflow : hidden
 }
 
 .BMap_scaleHBar img,
 .BMap_scaleLBar img,
 .BMap_scaleRBar img {
-  position: absolute;
-  width: 37px;
-  height: 442px;
-  left: 0;
+  position : absolute;
+  left : 0;
+  width : 37px;
+  height : 442px
 }
 
 .BMap_scaleHBar {
-  width: 100%;
-  height: 5px;
-  font-size: 0;
-  bottom: 0;
+  bottom : 0;
+  width : 100%;
+  height : 5px;
+  font-size : 0
 }
 
 .BMap_scaleHBar img {
-  top: -437px;
-  width: 100%;
+  top : -437px;
+  width : 100%
 }
 
 .BMap_scaleLBar,
 .BMap_scaleRBar {
-  width: 3px;
-  height: 9px;
-  bottom: 0;
-  font-size: 0;
-  z-index: 1;
+  bottom : 0;
+  z-index : 1;
+  width : 3px;
+  height : 9px;
+  font-size : 0
 }
 
 .BMap_scaleLBar img {
-  top: -427px;
-  left: 0;
+  top : -427px;
+  left : 0
 }
 
 .BMap_scaleRBar img {
-  top: -427px;
-  left: -5px;
+  top : -427px;
+  left : -5px
 }
 
 .BMap_scaleLBar {
-  left: 0;
+  left : 0
 }
 
 .BMap_scaleRBar {
-  right: 0;
+  right : 0
 }
 
 .BMap_scaleTxt {
-  text-align: center;
-  width: 100%;
-  cursor: default;
-  line-height: 18px;
+  width : 100%;
+  line-height : 18px;
+  text-align : center;
+  cursor : default
 }
 
 .BMap_omCtrl {
-  background-color: #fff;
-  overflow: hidden;
+  overflow : hidden;
+  background-color : #fff
 }
 
 .BMap_omOutFrame {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
+  position : absolute;
+  top : 0;
+  left : 0;
+  width : 100%;
+  height : 100%
 }
 
 .BMap_omInnFrame {
-  position: absolute;
-  border: 1px solid #999;
-  background-color: #ccc;
-  overflow: hidden;
+  position : absolute;
+  overflow : hidden;
+  background-color : #ccc;
+  border : 1px solid #999
 }
 
 .BMap_omMapContainer {
-  position: absolute;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
+  position : absolute;
+  top : 0;
+  left : 0;
+  width : 100%;
+  height : 100%;
+  overflow : hidden
 }
 
 .BMap_omViewMv {
-  border-width: 1px;
-  border-style: solid;
-  border-left-color: #84b0df;
-  border-top-color: #adcff4;
-  border-right-color: #274b8b;
-  border-bottom-color: #274b8b;
-  position: absolute;
-  z-index: 600;
+  position : absolute;
+  z-index : 600;
+  border-top-color : #adcff4;
+  border-right-color : #274b8b;
+  border-bottom-color : #274b8b;
+  border-left-color : #84b0df;
+  border-style : solid;
+  border-width : 1px
 }
 
 .BMap_omViewInnFrame {
-  border: 1px solid #3e6bb8;
+  border : 1px solid #3e6bb8
 }
 
 .BMap_omViewMask {
-  width: 1000px;
-  height: 1000px;
-  position: absolute;
-  left: 0;
-  top: 0;
-  background-color: #68c;
-  opacity: .2;
-  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=20);
+  position : absolute;
+  top : 0;
+  left : 0;
+  width : 1000px;
+  height : 1000px;
+  background-color : #68c;
+  opacity : .2;
+  filter : progid:dximagetransform.microsoft.alpha(opacity=20)
 }
 
 .BMap_omBtn {
-  height: 13px;
-  width: 13px;
-  position: absolute;
-  cursor: pointer;
-  overflow: hidden;
-  background: url(../images/mapctrls1d3.gif) no-repeat;
-  z-index: 1210;
+  position : absolute;
+  z-index : 1210;
+  width : 13px;
+  height : 13px;
+  overflow : hidden;
+  cursor : pointer;
+  background : url(../images/mapctrls1d3.gif) no-repeat
 }
 
 .anchorBR .BMap_omOutFrame {
-  border-top: 1px solid #999;
-  border-left: 1px solid #999;
+  border-top : 1px solid #999;
+  border-left : 1px solid #999
 }
 
 .quad4 .BMap_omBtn {
-  background-position: -26px -27px;
+  background-position : -26px -27px
 }
 
 .quad4 .BMap_omBtn.hover {
-  background-position: 0 -27px;
+  background-position : 0 -27px
 }
 
 .quad4 .BMap_omBtn.BMap_omBtnClosed {
-  background-position: -39px -27px;
+  background-position : -39px -27px
 }
 
 .quad4 .BMap_omBtn.BMap_omBtnClosed.hover {
-  background-position: -13px -27px;
+  background-position : -13px -27px
 }
 
 .anchorTR .BMap_omOutFrame {
-  border-bottom: 1px solid #999;
-  border-left: 1px solid #999;
+  border-bottom : 1px solid #999;
+  border-left : 1px solid #999
 }
 
 .quad1 .BMap_omBtn {
-  background-position: -39px -41px;
+  background-position : -39px -41px
 }
 
 .quad1 .BMap_omBtn.hover {
-  background-position: -13px -41px;
+  background-position : -13px -41px
 }
 
 .quad1 .BMap_omBtn.BMap_omBtnClosed {
-  background-position: -26px -41px;
+  background-position : -26px -41px
 }
 
 .quad1 .BMap_omBtn.BMap_omBtnClosed.hover {
-  background-position: 0 -41px;
+  background-position : 0 -41px
 }
 
 .anchorBL .BMap_omOutFrame {
-  border-top: 1px solid #999;
-  border-right: 1px solid #999;
+  border-top : 1px solid #999;
+  border-right : 1px solid #999
 }
 
 .quad3 .BMap_omBtn {
-  background-position: -27px -40px;
+  background-position : -27px -40px
 }
 
 .quad3 .BMap_omBtn.hover {
-  background-position: -1px -40px;
+  background-position : -1px -40px
 }
 
 .quad3 .BMap_omBtn.BMap_omBtnClosed {
-  background-position: -40px -40px;
+  background-position : -40px -40px
 }
 
 .quad3 .BMap_omBtn.BMap_omBtnClosed.hover {
-  background-position: -14px -40px;
+  background-position : -14px -40px
 }
 
 .anchorTL .BMap_omOutFrame {
-  border-bottom: 1px solid #999;
-  border-right: 1px solid #999;
+  border-right : 1px solid #999;
+  border-bottom : 1px solid #999
 }
 
 .quad2 .BMap_omBtn {
-  background-position: -40px -28px;
+  background-position : -40px -28px
 }
 
 .quad2 .BMap_omBtn.hover {
-  background-position: -14px -28px;
+  background-position : -14px -28px
 }
 
 .quad2 .BMap_omBtn.BMap_omBtnClosed {
-  background-position: -27px -28px;
+  background-position : -27px -28px
 }
 
 .quad2 .BMap_omBtn.BMap_omBtnClosed.hover {
-  background-position: -1px -28px;
+  background-position : -1px -28px
 }
 
 .anchorR .BMap_omOutFrame {
-  border-bottom: 1px solid #999;
-  border-left: 1px solid #999;
-  border-top: 1px solid #999;
+  border-top : 1px solid #999;
+  border-bottom : 1px solid #999;
+  border-left : 1px solid #999
 }
 
 .anchorL .BMap_omOutFrame {
-  border-bottom: 1px solid #999;
-  border-right: 1px solid #999;
-  border-top: 1px solid #999;
+  border-top : 1px solid #999;
+  border-right : 1px solid #999;
+  border-bottom : 1px solid #999
 }
 
 .anchorB .BMap_omOutFrame {
-  border-top: 1px solid #999;
-  border-left: 1px solid #999;
-  border-right: 1px solid #999;
+  border-top : 1px solid #999;
+  border-right : 1px solid #999;
+  border-left : 1px solid #999
 }
 
 .anchorT .BMap_omOutFrame {
-  border-bottom: 1px solid #999;
-  border-right: 1px solid #999;
-  border-left: 1px solid #999;
+  border-right : 1px solid #999;
+  border-bottom : 1px solid #999;
+  border-left : 1px solid #999
 }
 
 .anchorNon .BMap_omOutFrame,
 .withOffset .BMap_omOutFrame {
-  border: 1px solid #999;
+  border : 1px solid #999
 }
 
 .BMap_zoomMask0,
 .BMap_zoomMask1 {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: transparent url(../images/blank.gif);
-  z-index: 1000;
+  position : absolute;
+  top : 0;
+  left : 0;
+  z-index : 1000;
+  width : 100%;
+  height : 100%;
+  background : transparent url(../images/blank.gif)
 }
 
 .BMap_contextMenu {
-  position: absolute;
-  border-top: 1px solid #adbfe4;
-  border-left: 1px solid #adbfe4;
-  border-right: 1px solid #8ba4d8;
-  border-bottom: 1px solid #8ba4d8;
-  padding: 0;
-  margin: 0;
-  width: auto;
-  visibility: hidden;
-  background: #fff;
-  z-index: 10000000;
+  position : absolute;
+  z-index : 10000000;
+  width : auto;
+  padding : 0;
+  margin : 0;
+  background : #fff;
+  border-top : 1px solid #adbfe4;
+  border-right : 1px solid #8ba4d8;
+  border-bottom : 1px solid #8ba4d8;
+  border-left : 1px solid #adbfe4;
+  visibility : hidden
 }
 
 .BMap_cmShadow {
-  position: absolute;
-  background: #000;
-  opacity: .3;
-  filter: alpha(opacity=30);
-  visibility: hidden;
-  z-index: 9000000;
+  position : absolute;
+  z-index : 9000000;
+  background : #000;
+  opacity : .3;
+  filter : alpha(opacity=30);
+  visibility : hidden
 }
 
 div.BMap_cmDivider {
-  border-bottom: 1px solid #adbfe4;
-  font-size: 0;
-  padding: 1px;
-  margin: 0 6px;
+  padding : 1px;
+  margin : 0 6px;
+  font-size : 0;
+  border-bottom : 1px solid #adbfe4
 }
 
 div.BMap_cmFstItem {
-  margin-top: 2px;
+  margin-top : 2px
 }
 
 div.BMap_cmLstItem {
-  margin-bottom: 2px;
+  margin-bottom : 2px
 }
 
 .BMap_shadow img {
-  border: 0 none;
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  height: 370px;
-  width: 1144px;
+  position : absolute;
+  width : 1144px;
+  height : 370px;
+  padding : 0;
+  margin : 0;
+  border : 0 none
 }
 
 .BMap_pop .BMap_top {
-  border-top: 1px solid #ababab;
-  background-color: #fff;
+  background-color : #fff;
+  border-top : 1px solid #ababab
 }
 
 .BMap_pop .BMap_center {
-  border-left: 1px solid #ababab;
-  border-right: 1px solid #ababab;
-  background-color: #fff;
+  background-color : #fff;
+  border-right : 1px solid #ababab;
+  border-left : 1px solid #ababab
 }
 
 .BMap_pop .BMap_bottom {
-  border-bottom: 1px solid #ababab;
-  background-color: #fff;
+  background-color : #fff;
+  border-bottom : 1px solid #ababab
 }
 
 .BMap_shadow,
 .BMap_shadow img,
 .BMap_shadow div {
-  -moz-user-select: none;
-  -webkit-user-select: none;
+  -moz-user-select : none;
+  -webkit-user-select : none
 }
 
 .BMap_checkbox {
-  background: url(../images/mapctrls1d3.gif);
-  vertical-align: middle;
-  display: inline-block;
-  width: 11px;
-  height: 11px;
-  margin-right: 4px;
-  background-position: -14px 90px;
+  display : inline-block;
+  width : 11px;
+  height : 11px;
+  margin-right : 4px;
+  vertical-align : middle;
+  background : url(../images/mapctrls1d3.gif);
+  background-position : -14px 90px
 }
 
 .BMap_checkbox.checked {
-  background-position: -2px 90px;
+  background-position : -2px 90px
 }
 
 .BMap_pop .BMap_top img,
 .BMap_pop .BMap_center img,
 .BMap_pop .BMap_bottom img {
-  display: none;
+  display : none
 }
 
 @media print {
   .BMap_noprint {
-    display: none;
+    display : none
   }
 
   .BMap_noscreen {
-    display: block;
+    display : block
   }
 
   .BMap_mask {
-    background: none;
+    background : none
   }
 
   .BMap_pop .BMap_top img,
   .BMap_pop .BMap_center img,
   .BMap_pop .BMap_bottom img {
-    display: block;
+    display : block
   }
 }
