--- a/src/views/common/dashboard/welcome/index.scss
+++ b/src/views/common/dashboard/welcome/index.scss
@@ -25,6 +25,11 @@
       text-align: left;
       background-color: #f5f5f5;
       line-height: 30px;
+      cursor: pointer;
+
+      button {
+        cursor: pointer;
+      }
 
       h3 {
         text-align: center;
