--- a/src/assets/design/base/_base.scss
+++ b/src/assets/design/base/_base.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 /*  ----------------- HTML Elments CSS Utils ------------- */
 .full-container-size {
   width: 100%;
